fix: migrate transaction repository from MongoDB to PostgreSQL (#536)