@@ -1,11 +1,10 @@
 package it.gov.pagopa.payment.service.payment.common;
 
-import it.gov.pagopa.common.utils.TransactionSynchronizer;
 import it.gov.pagopa.common.web.exception.ServiceException;
 import it.gov.pagopa.payment.connector.event.trx.TransactionNotifierService;
 import it.gov.pagopa.payment.connector.rest.reward.RewardCalculatorConnector;
-import it.gov.pagopa.payment.constants.PaymentConstants.ExceptionCode;
 import it.gov.pagopa.payment.dto.AuthPaymentDTO;
+import it.gov.pagopa.payment.dto.CancelTransactionAuditDTO;
 import it.gov.pagopa.payment.dto.barcode.TransactionBarCodeCreationRequest;
 import it.gov.pagopa.payment.entity.Transaction;
 import it.gov.pagopa.payment.enums.SyncTrxStatus;
@@ -13,390 +12,380 @@ import it.gov.pagopa.payment.exception.custom.InternalServerErrorException;
 import it.gov.pagopa.payment.exception.custom.MerchantOrAcquirerNotAllowedException;
 import it.gov.pagopa.payment.exception.custom.OperationNotAllowedException;
 import it.gov.pagopa.payment.exception.custom.TransactionNotFoundOrExpiredException;
-import it.gov.pagopa.payment.model.TransactionInProgress;
-import it.gov.pagopa.payment.repository.TransactionInProgressRepository;
 import it.gov.pagopa.payment.repository.TransactionRepository;
 import it.gov.pagopa.payment.service.PaymentErrorNotifierService;
 import it.gov.pagopa.payment.service.payment.barcode.BarCodeCreationServiceImpl;
 import it.gov.pagopa.payment.test.fakers.TransactionFaker;
-import it.gov.pagopa.payment.test.fakers.TransactionInProgressFaker;
 import it.gov.pagopa.payment.utils.AuditUtilities;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-class CommonCancelServiceTest {
+class CommonCancelServiceImplTest {
 
   @Mock
-  private TransactionInProgressRepository repositoryMock;
+  private TransactionRepository transactionRepository;
   @Mock
-  private RewardCalculatorConnector rewardCalculatorConnectorMock;
+  private RewardCalculatorConnector rewardCalculatorConnector;
   @Mock
-  private TransactionNotifierService notifierServiceMock;
+  private TransactionNotifierService notifierService;
   @Mock
-  private PaymentErrorNotifierService paymentErrorNotifierServiceMock;
+  private PaymentErrorNotifierService paymentErrorNotifierService;
   @Mock
-  private AuditUtilities auditUtilitiesMock;
+  private AuditUtilities auditUtilities;
   @Mock
   private BarCodeCreationServiceImpl barCodeCreationService;
-  @Mock private TransactionRepository transactionRepository;
-  @Mock private TransactionSynchronizer transactionSynchronizer;
+  @InjectMocks
+  private CommonCancelServiceImpl commonCancelService;
 
-  private CommonCancelServiceImpl service;
+  private static final String TRX_ID = "TRX_123";
+  private static final String MERCHANT_ID = "MERCHANT_1";
+  private static final String ACQUIRER_ID = "ACQUIRER_1";
+  private static final String POS_ID = "POS_1";
+  private static final String INITIATIVE_ID = "INITIATIVE_1";
+  private static final String USER_ID = "USER_1";
 
-  @BeforeEach
-  void init() {
-    service =
-            new CommonCancelServiceImpl(
-                    transactionRepository,
-                    repositoryMock,
-                    rewardCalculatorConnectorMock,
-                    notifierServiceMock,
-                    paymentErrorNotifierServiceMock,
-                    auditUtilitiesMock,
-                    transactionSynchronizer,
-                    barCodeCreationService);
+
+  // =========================================================================
+  // 1. CANCEL TRANSACTION TESTS
+  // =========================================================================
+
+  @Test
+  @DisplayName("cancelTransaction - Transazione non trovata (TransactionNotFoundOrExpiredException)")
+  void testCancelTransaction_NotFound() {
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.empty());
+
+    assertThrows(TransactionNotFoundOrExpiredException.class,
+            () -> commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID));
+
+    verify(auditUtilities).logErrorCancelTransaction(TRX_ID, MERCHANT_ID);
   }
 
   @Test
-  void testTrxNotFound() {
-    TransactionNotFoundOrExpiredException exception = Assertions.assertThrows(
-            TransactionNotFoundOrExpiredException.class,
-            () -> service.cancelTransaction("TRXID", "MERCHID", "ACQID", "POSID")
-    );
+  @DisplayName("cancelTransaction - Merchant o Acquirer errati (MerchantOrAcquirerNotAllowedException)")
+  void testCancelTransaction_MerchantMismatch() {
+    Transaction trx = createTransaction(SyncTrxStatus.CREATED);
+    trx.setMerchantId("WRONG_MERCHANT");
 
-    Assertions.assertEquals("PAYMENT_NOT_FOUND_OR_EXPIRED", exception.getCode());
-    Assertions.assertEquals("Cannot find transaction with transactionId [TRXID]", exception.getMessage());
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+
+    assertThrows(MerchantOrAcquirerNotAllowedException.class,
+            () -> commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID));
+
+    verify(auditUtilities).logErrorCancelTransaction(TRX_ID, MERCHANT_ID);
   }
 
   @Test
-  void testMerchantIdNotValid() {
-    Transaction transaction = TransactionFaker.mockInstance(1, SyncTrxStatus.AUTHORIZED);
+  @DisplayName("cancelTransaction - Cancellazione immediata (Stato CREATED)")
+  void testCancelTransaction_ImmediatelyDeletable_Created() {
+    Transaction trx = createTransaction(SyncTrxStatus.CREATED);
 
-    when(transactionRepository.findById(anyString())).thenReturn(Optional.of(transaction));
-    when(repositoryMock.findById("TRXID"))
-            .thenReturn(Optional.ofNullable(TransactionInProgressFaker.mockInstance(0, SyncTrxStatus.AUTHORIZED)));
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
 
-    MerchantOrAcquirerNotAllowedException exception = Assertions.assertThrows(
-            MerchantOrAcquirerNotAllowedException.class,
-            () -> service.cancelTransaction("TRXID", "MERCHID", "ACQID", "POSID")
-    );
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
 
-    Assertions.assertEquals(ExceptionCode.PAYMENT_MERCHANT_NOT_ALLOWED, exception.getCode());
-    Assertions.assertEquals(
-            "The merchant with id [MERCHANTID0] associated to the transaction is not equal to the merchant with id [MERCHID]",
-            exception.getMessage()
-    );
+    assertEquals(SyncTrxStatus.CANCELLED, trx.getStatus());
+    verify(transactionRepository).save(trx);
+    verify(auditUtilities).logCancelTransaction(any(CancelTransactionAuditDTO.class));
   }
 
   @Test
-  void testAcquirerIdNotValid() {
-    Transaction transaction = TransactionFaker.mockInstance(1, SyncTrxStatus.AUTHORIZED);
+  @DisplayName("cancelTransaction - Cancellazione immediata (Stato IDENTIFIED)")
+  void testCancelTransaction_ImmediatelyDeletable_Identified() {
+    Transaction trx = createTransaction(SyncTrxStatus.IDENTIFIED);
 
-    when(transactionRepository.findById(anyString())).thenReturn(Optional.of(transaction));
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0, SyncTrxStatus.AUTHORIZED);
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
 
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
-    when(repositoryMock.findById("TRXID")).thenReturn(Optional.of(trx));
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
 
-    MerchantOrAcquirerNotAllowedException exception = Assertions.assertThrows(
-            MerchantOrAcquirerNotAllowedException.class,
-            () -> service.cancelTransaction("TRXID", "MERCHID", "ACQID_WRONG", "POSID")
-    );
-
-    Assertions.assertEquals(ExceptionCode.PAYMENT_MERCHANT_NOT_ALLOWED, exception.getCode());
-    Assertions.assertEquals(
-            "The merchant with id [MERCHID] associated to the transaction is not equal to the merchant with id [MERCHID]",
-            exception.getMessage()
-    );
+    assertEquals(SyncTrxStatus.CANCELLED, trx.getStatus());
+    verify(transactionRepository).save(trx);
   }
 
   @Test
-  void testStatusNotValid() {
-    Transaction transaction = TransactionFaker.mockInstance(1, SyncTrxStatus.REWARDED);
+  @DisplayName("cancelTransaction - Cancellazione immediata (Stato INVOICED)")
+  void testCancelTransaction_ImmediatelyDeletable_Invoiced() {
+    Transaction trx = createTransaction(SyncTrxStatus.INVOICED);
 
-    when(transactionRepository.findById(anyString())).thenReturn(Optional.of(transaction));
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0, SyncTrxStatus.REWARDED);
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
 
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
-    when(repositoryMock.findById("TRXID")).thenReturn(Optional.of(trx));
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
 
-    OperationNotAllowedException exception = Assertions.assertThrows(
-            OperationNotAllowedException.class,
-            () -> service.cancelTransaction("TRXID", "MERCHID", "ACQID", "POSID")
-    );
-
-    Assertions.assertEquals(ExceptionCode.TRX_DELETE_NOT_ALLOWED, exception.getCode());
-    Assertions.assertEquals("Cannot cancel transaction with transactionId [TRXID]", exception.getMessage());
-  }
-
-  @ParameterizedTest
-  @CsvSource({
-          "CREATED,false",
-          "IDENTIFIED,false",
-          "AUTHORIZED,false",
-          "AUTHORIZED,true",
-  })
-  void testSuccessful(SyncTrxStatus status, boolean notifyOutcome) {
-    Transaction transaction = TransactionFaker.mockInstance(1, status);
-    when(transactionRepository.findById(anyString())).thenReturn(Optional.of(transaction));
-    TransactionInProgress trx =
-            TransactionInProgressFaker.mockInstance(0, status);
-    trx.setId("TRXID");
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
-    trx.setRewardCents(1000L);
-    when(repositoryMock.findById("TRXID")).thenReturn(Optional.of(trx));
-
-    boolean expectedNotify = SyncTrxStatus.AUTHORIZED.equals(status);
-
-    if (expectedNotify) {
-      when(rewardCalculatorConnectorMock.cancelTransaction(trx)).thenReturn(new AuthPaymentDTO());
-      when(notifierServiceMock.notify(trx, trx.getMerchantId())).thenReturn(notifyOutcome);
-    }
-
-    service.cancelTransaction("TRXID", "MERCHID", "ACQID", "POSID");
-
-    verify(repositoryMock).deleteById("TRXID");
-    if (expectedNotify && !notifyOutcome) {
-      verify(paymentErrorNotifierServiceMock)
-              .notifyCancelPayment(any(), any(), eq(true), any());
-    }
+    assertEquals(SyncTrxStatus.INVOICED, trx.getStatus());
   }
 
   @Test
-  void testRefundIsNull_ShouldSkipNotificationAndDeleteTrx() {
-    Transaction transaction = TransactionFaker.mockInstance(1, SyncTrxStatus.AUTHORIZED);
-    when(transactionRepository.findById(anyString())).thenReturn(Optional.of(transaction));
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    trx.setId("TRXID");
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
+  @DisplayName("cancelTransaction - Stato non cancellabile (OperationNotAllowedException)")
+  void testCancelTransaction_OperationNotAllowed() {
+    Transaction trx = createTransaction(SyncTrxStatus.REJECTED);
+
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+
+    assertThrows(OperationNotAllowedException.class,
+            () -> commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID));
+
+    verify(auditUtilities).logErrorCancelTransaction(TRX_ID, MERCHANT_ID);
+  }
+
+  @Test
+  @DisplayName("cancelTransaction - AUTHORIZED senza extended authorization e refund con successo")
+  void testCancelTransaction_Authorized_Success() {
+    Transaction trx = createTransaction(SyncTrxStatus.AUTHORIZED);
     trx.setExtendedAuthorization(false);
 
-    when(repositoryMock.findById("TRXID")).thenReturn(Optional.of(trx));
-    when(rewardCalculatorConnectorMock.cancelTransaction(trx)).thenReturn(null);
+    AuthPaymentDTO refund = new AuthPaymentDTO();
+    refund.setRewardCents(100L);
 
-    service.cancelTransaction("TRXID", "MERCHID", "ACQID", "POSID");
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+    when(rewardCalculatorConnector.cancelTransaction(trx)).thenReturn(refund);
+    when(notifierService.notify(trx, USER_ID)).thenReturn(true);
 
-    verify(repositoryMock).deleteById("TRXID");
-    verifyNoInteractions(notifierServiceMock);
-    verifyNoInteractions(paymentErrorNotifierServiceMock);
-    verify(repositoryMock, never()).save(any());
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
+
+    assertEquals(SyncTrxStatus.CANCELLED, trx.getStatus());
+    assertEquals(100L, trx.getRewardCents());
+    assertNotNull(trx.getElaborationDateTime());
+    verify(transactionRepository).save(trx);
+    verify(notifierService).notify(trx, USER_ID);
+    verify(auditUtilities).logCancelTransaction(any(CancelTransactionAuditDTO.class));
   }
 
   @Test
-  void testAuthorizedTransaction_WithReset_ShouldResetAndSave() {
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
+  @DisplayName("cancelTransaction - AUTHORIZED con extended authorization (Reset e ricreazione trx)")
+  void testCancelTransaction_Authorized_ExtendedAuthorization() {
+    Transaction trx = createTransaction(SyncTrxStatus.AUTHORIZED);
     trx.setExtendedAuthorization(true);
+    trx.setVoucherAmountCents(500L);
+    trx.setChannel("CHANNEL_1");
+    trx.setTrxEndDate(OffsetDateTime.now(ZoneId.of("Europe/Rome")));
 
     AuthPaymentDTO refund = new AuthPaymentDTO();
-    refund.setRewardCents(1000L);
-    Transaction transaction = TransactionFaker.mockInstance(1, SyncTrxStatus.AUTHORIZED);
-    when(transactionRepository.findById(anyString())).thenReturn(Optional.of(transaction));
-    TransactionInProgress trxNew = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.CREATED);
-    trxNew.setMerchantId("MERCHID");
-    trxNew.setAcquirerId("ACQID");
-    trxNew.setExtendedAuthorization(true);
-    trxNew.setUserId(trx.getUserId());
-    trxNew.setTrxCode(trx.getTrxCode());
+    refund.setRewardCents(500L);
 
-    when(repositoryMock.findById("TRXID")).thenReturn(Optional.of(trx));
-    when(rewardCalculatorConnectorMock.cancelTransaction(trx)).thenReturn(refund);
-    when(notifierServiceMock.notify(trx, trx.getUserId())).thenReturn(true);
-    when(barCodeCreationService.createExtendedTransactionPostDelete(
-            new TransactionBarCodeCreationRequest(trx.getInitiativeId(), trx.getVoucherAmountCents()),
-            trx.getChannel(), trx.getUserId(), trx.getTrxEndDate())).thenReturn(trxNew);
+    Transaction newTrx = createTransaction(SyncTrxStatus.CREATED);
+    newTrx.setId("NEW_TRX_ID");
 
-    service.cancelTransaction("TRXID", "MERCHID", "ACQID", "POSID");
-    verify(notifierServiceMock).notify(trx, trx.getUserId());
-    verify(repositoryMock).save(any());
-    Assertions.assertEquals(trx.getTrxCode(), trxNew.getTrxCode());
-    Assertions.assertEquals(SyncTrxStatus.CREATED, trxNew.getStatus());
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+    when(rewardCalculatorConnector.cancelTransaction(trx)).thenReturn(refund);
+    when(barCodeCreationService.createExtendedTransactionPostDelete(any(TransactionBarCodeCreationRequest.class), anyString(), anyString(), any()))
+            .thenReturn(newTrx);
+    when(notifierService.notify(trx, USER_ID)).thenReturn(true);
+
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
+
+    verify(barCodeCreationService).createExtendedTransactionPostDelete(any(), eq("CHANNEL_1"), eq(USER_ID), any());
+    verify(transactionRepository, times(2)).save(any(Transaction.class));
+    verify(notifierService).notify(trx, USER_ID);
   }
 
   @Test
-  void testSendCancelledTransactionNotification_NotifyReturnsFalse_ShouldThrowException() {
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
+  @DisplayName("cancelTransaction - AUTHORIZED e notifica fallisce lanciando eccezione gestita da paymentErrorNotifierService")
+  void testCancelTransaction_Authorized_NotificationErrorHandled() {
+    Transaction trx = createTransaction(SyncTrxStatus.AUTHORIZED);
+    AuthPaymentDTO refund = new AuthPaymentDTO();
 
-    when(notifierServiceMock.notify(trx, trx.getUserId())).thenReturn(false);
-    when(notifierServiceMock.buildMessage(trx, trx.getUserId())).thenReturn(
-            mock(org.springframework.messaging.Message.class));
-    when(paymentErrorNotifierServiceMock.notifyCancelPayment(
-            any(), anyString(), eq(true), any(InternalServerErrorException.class)))
-            .thenReturn(true);
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+    when(rewardCalculatorConnector.cancelTransaction(trx)).thenReturn(refund);
+    when(notifierService.notify(trx, USER_ID)).thenReturn(false); // Notifica fallisce
+    when(paymentErrorNotifierService.notifyCancelPayment(any(), anyString(), eq(true), any())).thenReturn(true);
 
-    ReflectionTestUtils.invokeMethod(service, "sendCancelledTransactionNotification", trx, false);
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
 
-    verify(notifierServiceMock).notify(trx, trx.getUserId());
-    verify(paymentErrorNotifierServiceMock).notifyCancelPayment(
-            any(), anyString(), eq(true), any(InternalServerErrorException.class));
+    verify(paymentErrorNotifierService).notifyCancelPayment(any(), anyString(), eq(true), any(InternalServerErrorException.class));
   }
 
   @Test
-  void testSendCancelledTransactionNotification_NotifyThrowsException_ErrorNotifierSucceeds() {
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
+  @DisplayName("cancelTransaction - AUTHORIZED e eccezione in notifica che fallisce anche nel fallback")
+  void testCancelTransaction_Authorized_NotificationErrorFallbackFails() {
+    Transaction trx = createTransaction(SyncTrxStatus.AUTHORIZED);
+    AuthPaymentDTO refund = new AuthPaymentDTO();
 
-    RuntimeException exception = new RuntimeException("Notification error");
-    when(notifierServiceMock.notify(trx, trx.getUserId())).thenThrow(exception);
-    when(notifierServiceMock.buildMessage(trx, trx.getUserId())).thenReturn(
-            mock(org.springframework.messaging.Message.class));
-    when(paymentErrorNotifierServiceMock.notifyCancelPayment(
-            any(), anyString(), eq(true), eq(exception)))
-            .thenReturn(true);
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+    when(rewardCalculatorConnector.cancelTransaction(trx)).thenReturn(refund);
+    when(notifierService.notify(trx, USER_ID)).thenThrow(new RuntimeException("Kafka error"));
+    when(paymentErrorNotifierService.notifyCancelPayment(any(), anyString(), eq(true), any())).thenReturn(false);
 
-    ReflectionTestUtils.invokeMethod(service, "sendCancelledTransactionNotification", trx, true);
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
 
-    verify(notifierServiceMock).notify(trx, trx.getUserId());
-    verify(paymentErrorNotifierServiceMock).notifyCancelPayment(
-            any(), anyString(), eq(true), eq(exception));
+    verify(paymentErrorNotifierService).notifyCancelPayment(any(), anyString(), eq(true), any(RuntimeException.class));
   }
 
   @Test
-  void testSendCancelledTransactionNotification_NotifyThrowsException_ErrorNotifierFails() {
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
+  @DisplayName("cancelTransaction - AUTHORIZED ma refund ritornato dal connettore è null")
+  void testCancelTransaction_Authorized_RefundNull() {
+    Transaction trx = createTransaction(SyncTrxStatus.AUTHORIZED);
 
-    RuntimeException exception = new RuntimeException("Notification error");
-    when(notifierServiceMock.notify(trx, trx.getUserId())).thenThrow(exception);
-    when(notifierServiceMock.buildMessage(trx, trx.getUserId())).thenReturn(
-            mock(org.springframework.messaging.Message.class));
-    when(paymentErrorNotifierServiceMock.notifyCancelPayment(
-            any(), anyString(), eq(true), eq(exception)))
-            .thenReturn(false);
+    when(transactionRepository.findById(TRX_ID)).thenReturn(Optional.of(trx));
+    when(rewardCalculatorConnector.cancelTransaction(trx)).thenReturn(null);
 
-    ReflectionTestUtils.invokeMethod(service, "sendCancelledTransactionNotification", trx, false);
+    commonCancelService.cancelTransaction(TRX_ID, MERCHANT_ID, ACQUIRER_ID, POS_ID);
 
-    verify(notifierServiceMock).notify(trx, trx.getUserId());
-    verify(paymentErrorNotifierServiceMock).notifyCancelPayment(
-            any(), anyString(), eq(true), eq(exception));
+    verify(transactionRepository, never()).save(any());
+    verify(notifierService, never()).notify(any(), any());
   }
 
-  @ParameterizedTest
-  @CsvSource({
-          "true",
-          "false"
-  })
-  void testSendCancelledTransactionNotification_WithBothResetValues(boolean isReset) {
-    TransactionInProgress trx = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    trx.setMerchantId("MERCHID");
-    trx.setAcquirerId("ACQID");
-
-    when(notifierServiceMock.notify(trx, trx.getUserId())).thenReturn(true);
-
-    ReflectionTestUtils.invokeMethod(service, "sendCancelledTransactionNotification", trx, isReset);
-
-    verify(notifierServiceMock).notify(trx, trx.getUserId());
-    verifyNoInteractions(paymentErrorNotifierServiceMock);
-  }
+  // =========================================================================
+  // 2. REJECT PENDING TRANSACTIONS TESTS
+  // =========================================================================
 
   @Test
-  void testRejectPendingTransactions_ok() {
-    TransactionInProgress trx1 = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.AUTHORIZED);
-    TransactionInProgress trx2 = TransactionInProgressFaker.mockInstance(1,
-            SyncTrxStatus.AUTHORIZED);
+  @DisplayName("rejectPendingTransactions - Processa transazioni in sospeso a blocchi fino a svuotamento")
+  void testRejectPendingTransactions() {
+    Transaction trx1 = createTransaction(SyncTrxStatus.AUTHORIZED);
+    trx1.setId("TRX_1");
+    Transaction trx2 = createTransaction(SyncTrxStatus.CREATED);
+    trx2.setId("TRX_2");
 
-    when(repositoryMock.findPendingTransactions(100))
+    when(transactionRepository.findByStatusAndUpdateDateBefore(eq(SyncTrxStatus.AUTHORIZED), any(), any(Pageable.class)))
             .thenReturn(List.of(trx1, trx2))
-            .thenReturn(List.of());
-
-    CommonCancelServiceImpl spyService = spy(service);
-    doNothing().when(spyService).cancelTransaction(
-            anyString(),
-            anyString(),
-            anyString(),
-            anyString()
-    );
-
-    spyService.rejectPendingTransactions();
-
-    verify(repositoryMock, times(2)).findPendingTransactions(100);
-    verify(spyService, times(2))
-            .cancelTransaction(anyString(), anyString(), anyString(),
-                    anyString());
-  }
-
-  @Test
-  void testDeleteInvoicedTransaction_empty(){
-    when(repositoryMock.findInvoicedTransaction(any())).thenReturn(List.of());
-    ReflectionTestUtils.invokeMethod(service, "deleteInvoicedTransaction");
-    verify(repositoryMock, times(1)).findInvoicedTransaction(100);
-  }
-
-
-  @Test
-  void testDeleteInvoicedTransaction_notEmpty(){
-    TransactionInProgress trx =
-            TransactionInProgressFaker.mockInstance(0, SyncTrxStatus.INVOICED);
-    List<TransactionInProgress> firstBatch = List.of(trx);
-
-    when(repositoryMock.findInvoicedTransaction(100))
-            .thenReturn(firstBatch)
             .thenReturn(Collections.emptyList());
 
-    doNothing().when(repositoryMock).bulkDeleteByIds(any());
+    when(transactionRepository.findById("TRX_1")).thenReturn(Optional.of(trx1));
+    when(transactionRepository.findById("TRX_2")).thenReturn(Optional.of(trx2));
+    when(rewardCalculatorConnector.cancelTransaction(trx1)).thenReturn(new AuthPaymentDTO());
 
-    service.deleteInvoicedTransaction();
+    commonCancelService.rejectPendingTransactions();
 
-    verify(repositoryMock, times(2)).findInvoicedTransaction(100);
-
+    verify(transactionRepository, times(2)).findByStatusAndUpdateDateBefore(eq(SyncTrxStatus.AUTHORIZED), any(), any(Pageable.class));
+    verify(transactionRepository).findById("TRX_1");
+    verify(transactionRepository).findById("TRX_2");
   }
 
+  // =========================================================================
+  // 3. DELETE INVOICED TRANSACTION TESTS
+  // =========================================================================
 
   @Test
-  void testDeleteLapseTransactions_ok() {
-    TransactionInProgress trx1 = TransactionInProgressFaker.mockInstance(0,
-            SyncTrxStatus.IDENTIFIED);
-    TransactionInProgress trx2 = TransactionInProgressFaker.mockInstance(1,
-            SyncTrxStatus.IDENTIFIED);
-    TransactionInProgress trx3 = TransactionInProgressFaker.mockInstance(2,
-            SyncTrxStatus.IDENTIFIED);
-    TransactionInProgress trx4 = TransactionInProgressFaker.mockInstance(3,
-            SyncTrxStatus.REJECTED);
+  @DisplayName("deleteInvoicedTransaction - Processa e cancella le transazioni fatturate a blocchi")
+  void testDeleteInvoicedTransaction() {
+    Transaction trx1 = createTransaction(SyncTrxStatus.INVOICED);
+    trx1.setId("INVOICED_1");
+    Transaction trx2 = createTransaction(SyncTrxStatus.INVOICED);
+    trx2.setId("INVOICED_2");
 
-    when(repositoryMock.findLapsedTransaction("INITIATIVE_ID",100))
-            .thenReturn(List.of(trx1, trx2,trx3, trx4))
-            .thenReturn(List.of());
+    when(transactionRepository.findByStatusOrderByTrxDateAsc(eq(SyncTrxStatus.INVOICED), any(Pageable.class)))
+            .thenReturn(List.of(trx1, trx2))
+            .thenReturn(Collections.emptyList());
 
-    when(rewardCalculatorConnectorMock.cancelTransaction(trx2)).thenThrow(new TransactionNotFoundOrExpiredException("message"));
+    commonCancelService.deleteInvoicedTransaction();
 
-    when(rewardCalculatorConnectorMock.cancelTransaction(trx3)).thenThrow(new ServiceException("code","message"));
+    verify(transactionRepository).bulkDeleteByIds(List.of("INVOICED_1", "INVOICED_2"));
+  }
 
-    service.deleteLapsedTransaction("INITIATIVE_ID");
+  // =========================================================================
+  // 4. DELETE LAPSED TRANSACTION TESTS
+  // =========================================================================
 
-    verify(repositoryMock, times(2)).findLapsedTransaction("INITIATIVE_ID",100);
+  @Test
+  @DisplayName("deleteLapsedTransaction - Processa transazioni scadute con initiativeId non nullo")
+  void testDeleteLapsedTransaction_WithInitiativeId() {
+    Transaction trx1 = createTransaction(SyncTrxStatus.IDENTIFIED);
+    trx1.setId("LAPSED_1");
+
+    Transaction trx2 = createTransaction(SyncTrxStatus.CREATED);
+    trx2.setId("LAPSED_2");
+
+    when(transactionRepository.findAll(any(Specification.class), any(Pageable.class)))
+            .thenReturn(new PageImpl<>(List.of(trx1, trx2)))
+            .thenReturn(new PageImpl<>(Collections.emptyList()));
+
+    commonCancelService.deleteLapsedTransaction(INITIATIVE_ID);
+
+    verify(rewardCalculatorConnector).cancelTransaction(trx1);
+    verify(transactionRepository).bulkDeleteByIds(List.of("LAPSED_1", "LAPSED_2"));
+    verify(auditUtilities, times(2)).logExpiredTransaction(eq(INITIATIVE_ID), anyString(), any(), any(), anyString());
+  }
+
+  @Test
+  @DisplayName("deleteLapsedTransaction - Con initiativeId nullo")
+  void testDeleteLapsedTransaction_NullInitiativeId() {
+    Transaction trx = createTransaction(SyncTrxStatus.CREATED);
+    trx.setId("LAPSED_1");
+
+    when(transactionRepository.findAll(any(Specification.class), any(Pageable.class)))
+            .thenReturn(new PageImpl<>(List.of(trx)))
+            .thenReturn(new PageImpl<>(Collections.emptyList()));
+
+    commonCancelService.deleteLapsedTransaction(null);
+
+    verify(transactionRepository).bulkDeleteByIds(List.of("LAPSED_1"));
+  }
+
+  @Test
+  @DisplayName("handleExpiredTransactionBulk - Gestione eccezione TransactionNotFoundOrExpiredException")
+  void testHandleExpiredTransactionBulk_TransactionNotFoundOrExpiredException() {
+    Transaction trx = createTransaction(SyncTrxStatus.IDENTIFIED);
+
+    when(rewardCalculatorConnector.cancelTransaction(trx))
+            .thenThrow(new TransactionNotFoundOrExpiredException("Expired"));
+
+    boolean result = commonCancelService.handleExpiredTransactionBulk(trx);
+
+    assertTrue(result);
+  }
+
+  @Test
+  @DisplayName("handleExpiredTransactionBulk - Gestione eccezione ServiceException (restituisce false)")
+  void testHandleExpiredTransactionBulk_ServiceException() {
+    Transaction trx = createTransaction(SyncTrxStatus.IDENTIFIED);
+
+    when(rewardCalculatorConnector.cancelTransaction(trx))
+            .thenThrow(new ServiceException("SERVICE_ERR", null));
+
+    boolean result = commonCancelService.handleExpiredTransactionBulk(trx);
+
+    assertFalse(result);
+  }
+
+  @Test
+  @DisplayName("deleteLapsedTransaction - Gestione eccezione generica durante il processo singolo")
+  void testDeleteLapsedTransaction_ExceptionInProcessSingleTransaction() {
+    Transaction trx = createTransaction(SyncTrxStatus.IDENTIFIED);
+    trx.setId("LAPSED_ERR");
+
+    when(transactionRepository.findAll(any(Specification.class), any(Pageable.class)))
+            .thenReturn(new PageImpl<>(List.of(trx)))
+            .thenReturn(new PageImpl<>(Collections.emptyList()));
+
+    when(rewardCalculatorConnector.cancelTransaction(trx)).thenThrow(new RuntimeException("Generic Error"));
+
+    commonCancelService.deleteLapsedTransaction(INITIATIVE_ID);
+
+    verify(auditUtilities).logErrorExpiredTransaction(eq(INITIATIVE_ID), eq("LAPSED_ERR"), any(), any(), anyString());
+    verify(transactionRepository, never()).bulkDeleteByIds(anyList());
+  }
+
+  // =========================================================================
+  // HELPER METHODS
+  // =========================================================================
+
+  private Transaction createTransaction(SyncTrxStatus status) {
+    Transaction trx = TransactionFaker.mockInstance(1, status);
+    trx.setId(TRX_ID);
+    trx.setTrxCode("TRX_CODE_1");
+    trx.setInitiativeId(INITIATIVE_ID);
+    trx.setMerchantId(MERCHANT_ID);
+    trx.setAcquirerId(ACQUIRER_ID);
+    trx.setPointOfSaleId(POS_ID);
+    trx.setUserId(USER_ID);
+    trx.setStatus(status);
+    return trx;
   }
 }
-
-
